[metadata]
name = pyfixture
version = attr: pyfixture.VERSION
author = Ivan Georgiev
#author_email = ivan.georgiev@example.com
description = pytest style fixtures outside pytest
long_description = file: README.md
long_description_content_type = text/markdown
keywords = fixture
license = GNU-3
project_urls =
    Source = https://github.com/ivangeorgiev/py-fixture
    Documentation = 
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7

[bdist_wheel]
universal = 1

[tool:pytest]
addopts = -s -vv
testpaths =
   tests
